example/SyntaxError/output_line_error.pione
Rule ABC
  input '*.a'
  output ######
Action
cat {$I[1]} > {$O[1]}
End